# fakemall

./: Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
examples/: example.toml
src/: error.rs  main.rs  set.rs
tests/: cli.rs  test_config.toml
