[package]
name = "fakemall"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
toml_edit = "0.19.0"
toml = "0.7.0"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.68"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
